[tool.poetry]
name = "pubmed-query"
version = "0.1.0"
description = ""
authors = ["legionJP <jjpsingh18@gmail.com>"]
readme = "README.md"
packages = [{include = "pubmed_fetcher"}, {include= "get_paper_list"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list ="get_paper_list.get_paper_list:run"